--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mongoose": "^5.9.23"
+    "mongoose": "^5.9.23",
+    "validator": "^13.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
